--- a/src/components.css
+++ b/src/components.css
@@ -32,3 +32,41 @@ input {
   bottom: 12px;
   color: red;
 }
+
+.result-box {
+  width: 47.5%;
+  background-color: grey;
+  word-wrap: break-word;
+}
+
+.nomination-box {
+  width: 47.5%;
+  background-color: grey;
+}
+
+
+.header {
+  margin-top: 50px;
+  text-align: left;
+  width: inherit;
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+.flex-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.results-container {
+  width: inherit;
+  display: flex;
+  flex-direction: row;
+  justify-content:  space-between;
+}
