--- a/src/components.css
+++ b/src/components.css
@@ -70,3 +70,19 @@ input {
   flex-direction: row;
   justify-content:  space-between;
 }
+
+.nominate-button {
+  background-color: red;
+  height: 40px;
+  margin: 5px 5px 5px 5px;
+  padding: 5px 5px 5px 5px;
+  width: 100px;
+}
+
+.nominate-button:hover {
+ background-color: rgb(241, 112, 112);
+}
+
+.nominate-button:disabled {
+  background-color: yellow;
+}
