--- a/src/components.css
+++ b/src/components.css
@@ -86,3 +86,17 @@ input {
 .nominate-button:disabled {
   background-color: yellow;
 }
+
+.banner {
+  z-index: 2;
+  position: absolute;
+  background-color: purple;
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.trophy {
+  margin: auto;
+}
